updated page to be my professional space

--- a/index.html
+++ b/index.html
@@ -1,14 +1,124 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width" />
-        <title>SONDE SOLUTIONS</title>
-    </head>
-    <body>
-        <h1>SONDE SOLUTIONS</h1>
+<html lang="en">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Darshan Sonde | Innovation Architect</title>
+    <style>
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 20px;
+            background-color: #f0f0f0;
+            color: #333;
+        }
+        h1, h2 {
+            color: #2c3e50;
+        }
+        .project {
+            background-color: #fff;
+            padding: 20px;
+            margin-top: 30px;
+            border-radius: 10px;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+        }
+        .tagline {
+            font-style: italic;
+            color: #3498db;
+        }
+        .featured-project {
+            background-color: #e74c3c;
+            color: #fff;
+            padding: 30px;
+            margin-top: 30px;
+            border-radius: 15px;
+            box-shadow: 0 6px 8px rgba(0,0,0,0.2);
+        }
+        .featured-project h2 {
+        color: #fff;
+        padding: 10px 0; /* Reduced padding top and bottom */
+        margin: 0; /* Remove default margins */
+    }
+        .featured-project ul {
+            list-style-type: none;
+            padding-left: 0;
+        }
+        .featured-project li {
+            margin-bottom: 10px;
+        }
+        .featured-project li:before {
+            content: "✓ ";
+            font-weight: bold;
+        }
+        .featured-link {
+            display: inline-block;
+            background-color: #fff;
+            color: #e74c3c;
+            padding: 10px 20px;
+            border-radius: 5px;
+            text-decoration: none;
+            font-weight: bold;
+            margin-top: 15px;
+            transition: background-color 0.3s, color 0.3s;
+        }
+        .featured-link:hover {
+            background-color: #2c3e50;
+            color: #fff;
+        }
+    </style>
+</head>
+<body>
+    <h1>Darshan Sonde</h1>
+    <p class="tagline">Revolutionizing Personal Finance and Insurance with Cutting-Edge Tech Solutions</p>
+    
+    <p>Welcome to my professional space. I'm Darshan, a technology strategist specializing in simplifying personal finance management and transforming the insurance landscape through innovative solutions. My expertise lies in creating comprehensive platform ecosystems that drive efficiency and growth across various sectors.</p>
+    
+    <div class="featured-project" style="margin-bottom: 30px;">
+        <h2>ExpensePen - Personal Finance Assistant</h2>
+        <p>Building an intuitive AI-powered personal finance assistant that simplifies expense tracking and management.</p>
         <ul>
-            <li><a href="https://expensepen.com" target="_blank">Expense Pen</a> - easily record and remember all your expenses</li>
+            <li>Automated expense categorization using machine learning</li>
+            <li>Real-time insights and personalized budgeting recommendations</li>
+            <li>Seamless integration with bank accounts and credit cards</li>
+            <li>Natural language processing for easy expense logging via voice or text</li>
         </ul>
-    </body>
+        <a href="https://expensepen.com" target="_blank" class="featured-link">Visit ExpensePen.com</a>
+    </div>
+
+    <div class="project">
+        <h2>D2C Insurance Platform</h2>
+        <p>Developed a user-friendly direct-to-consumer platform that simplifies insurance purchasing and management for Indonesian consumers.</p>
+        <ul>
+            <li>Increased insurance penetration by 30% among millennials</li>
+            <li>Reduced policy issuance time from days to minutes</li>
+            <li>Implemented AI-driven personalized product recommendations</li>
+        </ul>
+        <a href="https://insureka.com" target="_blank" class="featured-link">Visit Insureka.com</a>
+    </div>
+
+    <div class="project">
+        <h2>B2B2C Insurance Distribution System</h2>
+        <p>Created a flexible B2B2C platform enabling businesses to offer insurance products to their customers seamlessly.</p>
+        <ul>
+            <li>Onboarded 50+ partners across various industries</li>
+            <li>Achieved 40% increase in insurance product cross-selling</li>
+            <li>Developed APIs for easy integration with partner systems</li>
+        </ul>
+        <a href="https://mytokoto.com" target="_blank" class="featured-link">Visit MyTokoto.com</a>
+    </div>
+
+    <div class="project">
+        <h2>Insurance Company Digitalization Suite</h2>
+        <p>Designed a comprehensive digital transformation solution for traditional insurance companies in Indonesia.</p>
+        <ul>
+            <li>Reduced operational costs by 25% through process automation</li>
+            <li>Improved claim processing speed by 60% using AI and machine learning</li>
+        </ul>
+        <a href="https://ramains.com" target="_blank" class="featured-link">Visit Ramains.com</a>
+    </div>
+
+    <p>Need a remote team to grow your business? I can help. I specialize in Build-Operate-Transfer (BOT) projects, creating custom teams for your needs. From finding talent to setting up processes, I've helped companies get results and stay competitive. Let's work together to reach your goals with a remote team that fits your business. The future is global - are you ready? Contact me to get started.</p>
+    <p>Connect with me on <a href="https://linkedin.com/in/darshansonde" target="_blank">LinkedIn</a>.</p>
+</body>
 </html>
